# telegram-mcp-kit

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml  publish.yml
src/telegram_mcp_kit/: client.py  config.py  server.py
src/telegram_mcp_kit/tools/: chat.py  messages.py  updates.py
telegram-mcp-kit/: LICENSE  README.md  pyproject.toml
telegram-mcp-kit/src/telegram_mcp_kit/: __init__.py  exceptions.py
telegram-mcp-kit/src/telegram_mcp_kit/tools/: __init__.py  _base.py  bot.py  files.py
telegram-mcp-kit/tests/: test_tools_bot.py  test_tools_chat.py  test_tools_files.py  test_tools_messages.py
tests/: conftest.py  test_client.py  test_discovery.py  test_tools_updates.py
