[project]
name = "telegram-mcp-kit"
version = "0.2.3"
description = "Telegram Bot API integration via MCP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "QuocTang", email = "tang.ai.quoc123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.13.1",
]

[project.urls]
Repository = "https://github.com/QuocTang/telegram-mcp-kit"
Issues = "https://github.com/QuocTang/telegram-mcp-kit/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[project.scripts]
telegram-mcp-kit = "telegram_mcp_kit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp_kit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
